--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ body, input, textarea, label, button, header, footer, .tab-content {
   background:#f5f5f5;
 }
 
-header { background:#15445a; color:white; text-align:center; padding:10px; }
+header { background:#0d302b; color:white; text-align:center; padding:10px; }
 header h1, header h2 { margin:3px 0; font-size:16px; }
 
-.tabs { display:flex; justify-content:center; background:#3d7eb9; flex-wrap:wrap; }
-.tab-button { flex:1; padding:10px; cursor:pointer; text-align:center; background:#3d7eb9; color:white; border:none; font-size:14px; font-weight:bold; }
-.tab-button.active { background:#0da9a6; }
+.tabs { display:flex; justify-content:center; background:#37648c; flex-wrap:wrap; }
+.tab-button { flex:1; padding:10px; cursor:pointer; text-align:center; background:#37648c; color:white; border:none; font-size:14px; font-weight:bold; }
+.tab-button.active { background:#0c8380; }
 
-.tab-content { display:none; padding:10px; background:white; border-radius:8px; margin:5px; }
+.tab-content { display:none; padding:10px; background:none; margin:5px; }
 .tab-content.active { display:block; }
 
 label {
@@ -104,7 +104,7 @@ footer {
 <div id="daily" class="tab-content active">
 <label><h2>التقرير اليومي</h2></label>
 
-<div style="display:flex; gap:10px; justify-content:center; margin-bottom:10px;">
+<div style="display:flex; gap:10px; justify-content:center; margin-bottom:30px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
     <label>إدارة تعليم منطقة</label>
     <input type="text">
@@ -241,7 +241,7 @@ footer {
 <div id="monthly" class="tab-content">
 <label><h2>التقرير الشهري</h2></label>
 
-<div style="display:flex; gap:10px; justify-content:center; margin-bottom:10px;">
+<div style="display:flex; gap:10px; justify-content:center; margin-bottom:1px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
     <label>إدارة تعليم منطقة</label>
     <input type="text">
