--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body, input, textarea, label, button, header, footer, .tab-content {
   background:#f5f5f5;
 }
 
-header { background:#0d302b; color:white; text-align:center; padding:10px; }
+header { background:#15445A; color:white; text-align:center; padding:10px; }
 header h1, header h2 { margin:3px 0; font-size:16px; }
 
 .tabs { display:flex; justify-content:center; background:#37648c; flex-wrap:wrap; }
