--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@ label {
   font-weight:bold;
   font-size:12px;
   background:transparent;
-  text-align:center; /* محاذاة الليبل للوسط */
+  text-align:center;
+}
+
+label::before {
+  content: ""; /* أيقونة افتراضية */
+  margin-left: 5px;
 }
 
 input, textarea {
@@ -52,7 +57,7 @@ input, textarea {
   margin-bottom:5px;
   box-sizing:border-box;
   font-size:12px;
-  text-align:center; /* محاذاة النص داخل الحقول للوسط */
+  text-align:center;
 }
 
 textarea { min-height:40px; }
@@ -102,44 +107,44 @@ footer {
 
 <!-- التقرير اليومي -->
 <div id="daily" class="tab-content active">
-<label><h2>التقرير اليومي</h2></label>
+<label><h2> 📝التقرير اليومي</h2></label>
 
 <div style="display:flex; gap:10px; justify-content:center; margin-bottom:30px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>إدارة تعليم منطقة</label>
+    <label>🏢 إدارة تعليم منطقة</label>
     <input type="text">
   </div>
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>اسم المدرسة</label>
+    <label>🏫 اسم المدرسة</label>
     <input type="text">
   </div>
 </div>
 
 <div style="display:grid; grid-template-columns:repeat(4,1fr); gap:5px;">
-  <div><label>اسم المعلم</label><input type="text"></div>
-  <div><label>التخصص</label><input type="text"></div>
-  <div><label>الفصل الدراسي</label><input type="text"></div>
-  <div><label>الصف</label><input type="text"></div>
-  <div><label>الوحدة الدراسية</label><input type="text"></div>
-  <div><label>عنوان الدرس</label><input type="text"></div>
-  <div><label>التاريخ</label><input type="text" id="dailyDate" placeholder="DD-MM-YYYY"></div>
-  <div><label>الحصة</label><input type="text"></div>
+  <div><label>👨‍🏫 اسم المعلم</label><input type="text"></div>
+  <div><label>🎓 التخصص</label><input type="text"></div>
+  <div><label>📘 الفصل الدراسي</label><input type="text"></div>
+  <div><label>🏷️ الصف</label><input type="text"></div>
+  <div><label>📖 الوحدة الدراسية</label><input type="text"></div>
+  <div><label>📝 عنوان الدرس</label><input type="text"></div>
+  <div><label>📆 التاريخ</label><input type="text" id="dailyDate" placeholder="DD-MM-YYYY"></div>
+  <div><label>⏰ الحصة</label><input type="text"></div>
 </div>
 
-<label>أهداف الدرس</label>
+<label>🎯 أهداف الدرس</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>نسبة تحقق أهداف الدرس</label><input type="text">
+<label>📊 نسبة تحقق أهداف الدرس</label><input type="text">
 
-<label>ملاحظات حول تفاعل الطلاب</label>
+<label>🗣️ ملاحظات حول تفاعل الطلاب</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>التحديات الصفية</label>
+<label>⚠️ التحديات الصفية</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
@@ -147,77 +152,76 @@ footer {
 <!-- حقل مدير المدرسة -->
 <div style="display:flex; justify-content:center; margin-bottom:10px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>مدير المدرسة</label>
+    <label>👔 مدير المدرسة</label>
     <input type="text">
   </div>
 </div>
-
 
 <input type="file" multiple accept="image/*" onchange="storeImages(event,'daily')">
 <div id="daily-counter" style="font-size:12px; color:#15445a; font-weight:bold;">عدد الصور المرفوعة: 0 / 4</div>
 <div id="daily-preview" style="display:flex; gap:5px; flex-wrap:wrap; margin-top:5px;"></div>
 
-<button onclick="printPDF('daily')">طباعة التقرير اليومي</button>
+<button onclick="printPDF('daily')">🖨️ طباعة التقرير اليومي</button>
 </div>
 
 <!-- التقرير الأسبوعي -->
 <div id="weekly" class="tab-content">
-<label><h2>التقرير الأسبوعي</h2></label>
+<label><h2>📝 التقرير الأسبوعي</h2></label>
 
 <div style="display:flex; gap:10px; justify-content:center; margin-bottom:10px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>إدارة تعليم منطقة</label>
+    <label>🏢 إدارة تعليم منطقة</label>
     <input type="text">
   </div>
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>اسم المدرسة</label>
+    <label>🏫 اسم المدرسة</label>
     <input type="text">
   </div>
 </div>
 
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
-  <div><label>اسم المعلم</label><input type="text"></div>
-  <div><label>التخصص</label><input type="text"></div>
-  <div><label>الفصل الدراسي</label><input type="text"></div>
+  <div><label>👨‍🏫 اسم المعلم</label><input type="text"></div>
+  <div><label>🎓 التخصص</label><input type="text"></div>
+  <div><label>📘 الفصل الدراسي</label><input type="text"></div>
 </div>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
-  <div><label>الصف</label><input type="text"></div>
-  <div><label>الأسبوع</label><input type="text"></div>
-  <div><label>التاريخ</label><input type="text" id="weeklyDate" placeholder="DD-MM-YYYY"></div>
-</div>
-
-<label>أهم الدروس المنفذة</label>
-<div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
-  <input type="text"><input type="text"><input type="text">
-  <input type="text"><input type="text"><input type="text">
+  <div><label>🏷️ الصف</label><input type="text"></div>
+  <div><label>🗓️ الأسبوع</label><input type="text"></div>
+  <div><label>📆 التاريخ</label><input type="text" id="weeklyDate" placeholder="DD-MM-YYYY"></div>
 </div>
 
-<label>أبرز نقاط القوة لدى الطلاب</label>
+<label>📌 أهم الدروس المنفذة</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
+  <input type="text"><input type="text"><input type="text">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>أبرز نقاط الضعف لدى الطلاب</label>
+<label>💪 أبرز نقاط القوة لدى الطلاب</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>أبرز التحديات التعليمية</label>
+<label>⚠️ أبرز نقاط الضعف لدى الطلاب</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>الإجراءات العلاجية</label>
+<label>🚧 أبرز التحديات التعليمية</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>أثر الإجراءات على تقدم الطلاب</label>
+<label>🛠️ الإجراءات العلاجية</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>توصيات الأسبوع القادم</label>
+<label>📈 أثر الإجراءات على تقدم الطلاب</label>
+<div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
+  <input type="text"><input type="text"><input type="text">
+</div>
+
+<label>💡 توصيات الأسبوع القادم</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
@@ -225,7 +229,7 @@ footer {
 <!-- حقل مدير المدرسة -->
 <div style="display:flex; justify-content:center; margin-bottom:10px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>مدير المدرسة</label>
+    <label>👔 مدير المدرسة</label>
     <input type="text">
   </div>
 </div>
@@ -234,68 +238,68 @@ footer {
 <div id="weekly-counter" style="font-size:12px; color:#15445a; font-weight:bold;">عدد الصور المرفوعة: 0 / 4</div>
 <div id="weekly-preview" style="display:flex; gap:5px; flex-wrap:wrap; margin-top:5px;"></div>
 
-<button onclick="printPDF('weekly')">طباعة التقرير الأسبوعي</button>
+<button onclick="printPDF('weekly')">🖨️ طباعة التقرير الأسبوعي</button>
 </div>
 
 <!-- التقرير الشهري -->
 <div id="monthly" class="tab-content">
-<label><h2>التقرير الشهري</h2></label>
+<label><h2>📝 التقرير الشهري</h2></label>
 
 <div style="display:flex; gap:10px; justify-content:center; margin-bottom:1px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>إدارة تعليم منطقة</label>
+    <label>🏢 إدارة تعليم منطقة</label>
     <input type="text">
   </div>
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>اسم المدرسة</label>
+    <label>🏫 اسم المدرسة</label>
     <input type="text">
   </div>
 </div>
 <div style="display:grid; grid-template-columns:repeat(4,1fr); gap:5px;">
-  <div><label>اسم المعلم</label><input type="text"></div>
-  <div><label>التخصص</label><input type="text"></div>
-  <div><label>الفصل الدراسي</label><input type="text"></div>
-  <div><label>الصف</label><input type="text"></div>
+  <div><label>👨‍🏫 اسم المعلم</label><input type="text"></div>
+  <div><label>🎓 التخصص</label><input type="text"></div>
+  <div><label>📘 الفصل الدراسي</label><input type="text"></div>
+  <div><label>🏷️ الصف</label><input type="text"></div>
 </div>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
-  <div><label>الشهر</label><input type="text"></div>
-  <div><label>التاريخ</label><input type="text" id="monthlyDate" placeholder="DD-MM-YYYY"></div>
-  <div><label>نسبة إنجاز الخطة</label><input type="text"></div>
+  <div><label>🗓️ الشهر</label><input type="text"></div>
+  <div><label>📆 التاريخ</label><input type="text" id="monthlyDate" placeholder="DD-MM-YYYY"></div>
+  <div><label>📊 نسبة إنجاز الخطة</label><input type="text"></div>
 </div>
 
-<label>أبرز التحسينات في أداء الطلاب</label>
-<div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
-  <input type="text"><input type="text"><input type="text">
-</div>
-
-<label>القضايا المستمرة التي تحتاج متابعة</label>
+<label>💡 أبرز التحسينات في أداء الطلاب</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>خطط المعالجة المقترحة</label>
+<label>⚠️ القضايا المستمرة التي تحتاج متابعة</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>الطلاب المتميزون</label>
-<div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
-  <input type="text"><input type="text"><input type="text">
-  <input type="text"><input type="text"><input type="text">
-</div>
-
-<label>الخطة الإثرائية للطلاب المتميزين</label>
+<label>🛠️ خطط المعالجة المقترحة</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>الطلاب المخفقون</label>
+<label>🌟 الطلاب المتميزون</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>الخطة العلاجية للطلاب المخفقين</label>
+<label>📘 الخطة الإثرائية للطلاب المتميزين</label>
+<div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
+  <input type="text"><input type="text"><input type="text">
+</div>
+
+<label>⚠️ الطلاب المخفقون</label>
+<div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
+  <input type="text"><input type="text"><input type="text">
+  <input type="text"><input type="text"><input type="text">
+</div>
+
+<label>🩺 الخطة العلاجية للطلاب المخفقين</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
@@ -303,7 +307,7 @@ footer {
 <!-- حقل مدير المدرسة -->
 <div style="display:flex; justify-content:center; margin-bottom:10px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>مدير المدرسة</label>
+    <label>👔 مدير المدرسة</label>
     <input type="text">
   </div>
 </div>
@@ -312,7 +316,7 @@ footer {
 <div id="monthly-counter" style="font-size:12px; color:#15445a; font-weight:bold;">عدد الصور المرفوعة: 0 / 4</div>
 <div id="monthly-preview" style="display:flex; gap:5px; flex-wrap:wrap; margin-top:5px;"></div>
 
-<button onclick="printPDF('monthly')">طباعة التقرير الشهري</button>
+<button onclick="printPDF('monthly')">🖨️ طباعة التقرير الشهري</button>
 </div>
 
 <footer>تصميم : أ.ضيف الله الطويرقي   0543559220 </footer>
