--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>نظام تقارير أداء المعلمة</title>
+<title>نظام تقارير أداء المعلم</title>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
@@ -11,7 +11,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
 
 <style>
-/* ----------- نافذة التنويه ----------- */
+/* ----------- تنسيق نافذة التنويه ----------- */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'HelveticaNeueW23', Arial, sans-serif;
+}
+/* خلفية التعتيم */
 .overlay {
   position: fixed;
   top: 0; left: 0;
@@ -22,6 +28,7 @@
   align-items: center;
   z-index: 2000;
 }
+/* صندوق الرسالة */
 .popup {
   background: #fff;
   padding: 20px;
@@ -50,7 +57,7 @@
   to { opacity: 1; transform: scale(1); }
 }
 
-/* ----------- تصميم صفحة النظام ----------- */
+/* ----------- تنسيقات صفحة التقارير الأصلية ----------- */
 @font-face {
   font-family: 'HelveticaNeueW23';
   src: url('fonts/HelveticaNeueW23-Regular.ttf') format('truetype');
@@ -60,8 +67,6 @@
 
 body, input, textarea, label, button, header, footer, .tab-content {
   font-family: 'HelveticaNeueW23', Arial, sans-serif;
-  margin:0;
-  padding:0;
   background:#f5f5f5;
 }
 
@@ -80,7 +85,6 @@ label {
   margin:5px 0 2px;
   font-weight:bold;
   font-size:12px;
-  background:transparent;
   text-align:center;
 }
 
@@ -141,24 +145,22 @@ footer {
   </div>
 </div>
 
-<!-- محتوى النظام -->
+<!-- محتوى صفحة النظام -->
 <div id="mainContent" style="display:none;">
+  <header>
+    <h1>نظام تقارير أداء المعلم</h1>
+  </header>
 
-<header>
-<h1>نظام تقارير أداء المعلمة</h1>
-</header>
+  <div class="tabs">
+    <button class="tab-button active" onclick="openTab('daily')">نموذج التقرير اليومي</button>
+    <button class="tab-button" onclick="openTab('weekly')">نموذج التقرير الأسبوعي</button>
+    <button class="tab-button" onclick="openTab('monthly')">نموذج التقرير الشهري</button>
+  </div>
 
-<div class="tabs">
-<button class="tab-button active" onclick="openTab('daily', event)">نموذج التقرير اليومي</button>
-<button class="tab-button" onclick="openTab('weekly', event)">نموذج التقرير الأسبوعي</button>
-<button class="tab-button" onclick="openTab('monthly', event)">نموذج التقرير الشهري</button>
-</div>
-
-<!-- التقرير اليومي -->
+  <!-- التقرير اليومي -->
 <div id="daily" class="tab-content active">
 <label><h2>التقرير اليومي</h2></label>
 
-<!-- حقول الإدارة واسم المدرسة (منتصف، عرض 200px) -->
 <div style="display:flex; gap:10px; justify-content:center; margin-bottom:30px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
     <label>إدارة تعليم منطقة</label>
@@ -171,7 +173,7 @@ footer {
 </div>
 
 <div style="display:grid; grid-template-columns:repeat(4,1fr); gap:5px;">
-  <div><label>اسم المعلمة</label><input type="text"></div>
+  <div><label>اسم المعلم</label><input type="text"></div>
   <div><label>التخصص</label><input type="text"></div>
   <div><label>الفصل الدراسي</label><input type="text"></div>
   <div><label>الصف</label><input type="text"></div>
@@ -189,7 +191,7 @@ footer {
 
 <label>نسبة تحقق أهداف الدرس</label><input type="text">
 
-<label>ملاحظات حول تفاعل الطالبات</label>
+<label>ملاحظات حول تفاعل الطلاب</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
@@ -202,10 +204,11 @@ footer {
 <!-- حقل مدير المدرسة -->
 <div style="display:flex; justify-content:center; margin-bottom:10px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>مديرة المدرسة</label>
+    <label>مدير المدرسة</label>
     <input type="text">
   </div>
 </div>
+
 
 <input type="file" multiple accept="image/*" onchange="storeImages(event,'daily')">
 <div id="daily-counter" style="font-size:12px; color:#15445a; font-weight:bold;">عدد الصور المرفوعة: 0 / 4</div>
@@ -218,7 +221,6 @@ footer {
 <div id="weekly" class="tab-content">
 <label><h2>التقرير الأسبوعي</h2></label>
 
-<!-- حقول الإدارة واسم المدرسة -->
 <div style="display:flex; gap:10px; justify-content:center; margin-bottom:10px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
     <label>إدارة تعليم منطقة</label>
@@ -231,7 +233,7 @@ footer {
 </div>
 
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
-  <div><label>اسم المعلمة</label><input type="text"></div>
+  <div><label>اسم المعلم</label><input type="text"></div>
   <div><label>التخصص</label><input type="text"></div>
   <div><label>الفصل الدراسي</label><input type="text"></div>
 </div>
@@ -247,12 +249,12 @@ footer {
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>أبرز نقاط القوة لدى الطالبات</label>
+<label>أبرز نقاط القوة لدى الطلاب</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>أبرز نقاط الضعف لدى الطالبات</label>
+<label>أبرز نقاط الضعف لدى الطلاب</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
@@ -267,7 +269,7 @@ footer {
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>أثر الإجراءات على تقدم الطالبات</label>
+<label>أثر الإجراءات على تقدم الطلاب</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
@@ -280,7 +282,7 @@ footer {
 <!-- حقل مدير المدرسة -->
 <div style="display:flex; justify-content:center; margin-bottom:10px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>مديرة المدرسة</label>
+    <label>مدير المدرسة</label>
     <input type="text">
   </div>
 </div>
@@ -296,7 +298,6 @@ footer {
 <div id="monthly" class="tab-content">
 <label><h2>التقرير الشهري</h2></label>
 
-<!-- حقول الإدارة واسم المدرسة -->
 <div style="display:flex; gap:10px; justify-content:center; margin-bottom:1px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
     <label>إدارة تعليم منطقة</label>
@@ -307,9 +308,8 @@ footer {
     <input type="text">
   </div>
 </div>
-
 <div style="display:grid; grid-template-columns:repeat(4,1fr); gap:5px;">
-  <div><label>اسم المعلمة</label><input type="text"></div>
+  <div><label>اسم المعلم</label><input type="text"></div>
   <div><label>التخصص</label><input type="text"></div>
   <div><label>الفصل الدراسي</label><input type="text"></div>
   <div><label>الصف</label><input type="text"></div>
@@ -317,10 +317,10 @@ footer {
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <div><label>الشهر</label><input type="text"></div>
   <div><label>التاريخ</label><input type="text" id="monthlyDate" placeholder="DD-MM-YYYY"></div>
-  <div><label>نسبة إنجاز الخطة  </label><input type="text"></div>
+  <div><label>نسبة إنجاز الخطة</label><input type="text"></div>
 </div>
 
-<label>أبرز التحسينات في أداء الطالبات</label>
+<label>أبرز التحسينات في أداء الطلاب</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
@@ -335,24 +335,24 @@ footer {
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>الطالبات المتميزات</label>
+<label>الطلاب المتميزون</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>الخطة الإثرائية للطالبات المتميزات</label>
+<label>الخطة الإثرائية للطلاب المتميزين</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>الطالبات المخفقات</label>
+<label>الطلاب المخفقون</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
   <input type="text"><input type="text"><input type="text">
 </div>
 
-<label>الخطة العلاجية للطالبات المخفقات</label>
+<label>الخطة العلاجية للطلاب المخفقين</label>
 <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:5px;">
   <input type="text"><input type="text"><input type="text">
 </div>
@@ -360,7 +360,7 @@ footer {
 <!-- حقل مدير المدرسة -->
 <div style="display:flex; justify-content:center; margin-bottom:10px;">
   <div style="display:flex; flex-direction:column; align-items:center; width:200px;">
-    <label>مديرة المدرسة</label>
+    <label>مدير المدرسة</label>
     <input type="text">
   </div>
 </div>
@@ -372,8 +372,9 @@ footer {
 <button onclick="printPDF('monthly')">طباعة التقرير الشهري</button>
 </div>
 
-<footer>تصميم : أ.ضيف الله الطويرقي   0543559220 </footer>
 
+  
+  <footer>تصميم : أ.ضيف الله الطويرقي   0543559220 </footer>
 </div>
 
 <script>
